# so-answer-cmake-java

./: .gitignore  CMakeLists.txt  LICENSE
example-cpp/: CMakeLists.txt  hello.cpp
example-java/: CMakeLists.txt
example-java/com/example/: Hello.java
